--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -115,7 +115,7 @@
 										<a asp-controller="Product" asp-action="Index">Products</a>
 									</li>
 									<li>
-										<a href="blog.html">Blog</a>
+										<a asp-controller="Blog" asp-action="Index">Blog</a>
 									</li>
 									<li>
 										<a href="/admin">Buy Template</a>
