--- a/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -110,6 +110,12 @@
                         </li>
                         <li class="nav-main-heading">Properties</li>
                         <li class="nav-main-item">
+                            <a class="nav-main-link" asp-controller="Products" asp-action="Index">
+                                <i class="nav-main-link-icon fa fa-clone"></i>
+                                <span class="nav-main-link-name">Products</span>
+                            </a>
+                        </li>
+                        <li class="nav-main-item">
                             <a class="nav-main-link" asp-controller="Categories" asp-action="Index">
                                 <i class="nav-main-link-icon fa fa-clone"></i>
                                 <span class="nav-main-link-name">Categories</span>
