--- a/Areas/Admin/Views/Blogs/Delete.cshtml
+++ b/Areas/Admin/Views/Blogs/Delete.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Delete";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Delete</h1>
@@ -41,6 +41,12 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Topic.Id)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Content)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Content)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IsDetele)
