--- a/Areas/Admin/Views/Blogs/Index.cshtml
+++ b/Areas/Admin/Views/Blogs/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Index</h1>
@@ -29,6 +29,9 @@
                 @Html.DisplayNameFor(model => model.Topic)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Content)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.IsDetele)
             </th>
             <th></th>
@@ -51,6 +54,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Topic.Id)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Content)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.IsDetele)
