--- a/Areas/Admin/Views/Topics/Create.cshtml
+++ b/Areas/Admin/Views/Topics/Create.cshtml
@@ -4,76 +4,31 @@
     ViewData["Title"] = "Create";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
-@section Styles {
-    <link rel="stylesheet" href="~/admin/js/plugins/select2/css/select2.min.css">
-}
-@section Scripts{
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
-    <script src="~/admin/js/plugins/select2/js/select2.full.min.js"></script>
-    <script src="~/admin/js/plugins/ckeditor/ckeditor.js"></script>
-    <script src="~/admin/js/plugins/jquery-validation/jquery.validate.min.js"></script>
-    <script src="~/admin/js/plugins/jquery-validation/additional-methods.js"></script>
-}
+
 <h1>Create</h1>
 
 <h4>Topic</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-@*         <form asp-action="Create">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
-            </div> 
+            </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
-        </form> *@
-        <form asp-action="Create" id="blog-form" method="POST" onsubmit="return false;">
-<div class="content">
-    <div class="row">
-        <div class="col-8">
-            <!-- Info -->
-            <div class="block block-rounded">
-                <div class="block-header block-header-default">
-                    <h3 class="block-title">Add blog</h3>
-                </div>
-                <div class="block-content">
-                        <div class="mb-4">
-                            <label class="form-label" for="blog-name">Name (Title)</label>
-                            <input type="text" class="form-control" id="blog-name" name="blog-name">
-                        </div>
-
-                                <div class="mb-4">
-                                    <label class="form-label" for="upload-image">Images</label>
-                                    <div class="upload-image-container">
-                                        <input type="file" id="upload-image" name="upload-image" class="upload-image-input" hidden multiple />
-                                        <div class="no-image">
-                                            <p>Select files to upload thumbnails</p>
-                                        </div>
-                                        <div class="has-image">
-                                        </div>
-                                    </div>
-                                </div>
-
-
-                        <div class="mb-4">
-                            <label class="form-label">Content</label>
-                            <textarea id="js-ckeditor" name="blog-content"></textarea>
-                        </div>
-                </div>
-            </div>
-           </div>
+        </form>
     </div>
 </div>
-</form>
 
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
-</div>
-</div>
+
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
