--- a/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -129,7 +129,7 @@
                         </li>
                         <li class="nav-main-item">
                             <a class="nav-main-link" asp-controller="Customers" asp-action="Index">
-                                <i class="nav-main-link-icon fa fa-bolt"></i>
+                                <i class="nav-main-link-icon fa-regular fa-user"></i>
                                 <span class="nav-main-link-name">Customser</span>
                             </a>
                         </li>
