--- a/Areas/Admin/Views/Customers/Index.cshtml
+++ b/Areas/Admin/Views/Customers/Index.cshtml
@@ -39,6 +39,14 @@
             </div>
         </div>
         <div class="block-content">
+            <div class="row mb-3">
+                <div class="input-group">
+                    <input type="text" class="form-control form-control-alt" id="SearchString" name="SearchString" placeholder="Tên khách hàng...">
+                    <button type="submit" class="input-group-text bg-body border-0 btn-search">
+                        <i class="fa fa-search"></i>
+                    </button>
+                </div>
+            </div>
             <div class="table-responsive">
                 <table class="table table-vcenter">
                     <thead>
@@ -57,6 +65,7 @@
                     <tbody id="listCustomer">
                     </tbody>
                 </table>
+                <ul class="pagination"><li class="paginate_button page-item first disabled"><a aria-controls="DataTables_Table_4" aria-disabled="true" role="link" data-dt-idx="first" tabindex="0" class="page-link"><i class="fa fa-angle-double-left"></i></a></li><li class="paginate_button page-item previous disabled" id="DataTables_Table_4_previous"><a aria-controls="DataTables_Table_4" aria-disabled="true" role="link" data-dt-idx="previous" tabindex="0" class="page-link"><i class="fa fa-angle-left"></i></a></li><li class="paginate_button page-item active"><a href="#" aria-controls="DataTables_Table_4" role="link" aria-current="page" data-dt-idx="0" tabindex="0" class="page-link">1</a></li><li class="paginate_button page-item "><a href="#" aria-controls="DataTables_Table_4" role="link" data-dt-idx="1" tabindex="0" class="page-link">2</a></li><li class="paginate_button page-item "><a href="#" aria-controls="DataTables_Table_4" role="link" data-dt-idx="2" tabindex="0" class="page-link">3</a></li><li class="paginate_button page-item "><a href="#" aria-controls="DataTables_Table_4" role="link" data-dt-idx="3" tabindex="0" class="page-link">4</a></li><li class="paginate_button page-item next" id="DataTables_Table_4_next"><a href="#" aria-controls="DataTables_Table_4" role="link" data-dt-idx="next" tabindex="0" class="page-link"><i class="fa fa-angle-right"></i></a></li><li class="paginate_button page-item last" id="DataTables_Table_4_last"><a href="#" aria-controls="DataTables_Table_4" role="link" data-dt-idx="last" tabindex="0" class="page-link"><i class="fa fa-angle-double-right"></i></a></li></ul>
             </div>
         </div>
     </div>
@@ -122,7 +131,6 @@
                             <label class="form-check-label" for="user_status"></label>
                         </div>
                     </div>
-                        
                 </form>
             </div>
             <div class="model-footer block-content block-content-full text-end bg-body">
@@ -143,7 +151,7 @@
      aria-hidden="true">
     <div class="modal-dialog modal-dialog-scrollable">
         <div class="modal-content">
-                <div class="block-header bg-primary-dark">
+                <div class="block-header bg-primary-dark text-white">
                     <h3 class="block-title">Edit customer</h3>
                     <div class="block-options">
                         <button type="button" class="btn-block-option" data-bs-dismiss="modal" aria-label="Close">
@@ -194,20 +202,19 @@
                                 <label class="form-check-label" for="user_status-edit"></label>
                             </div>
                         </div>
-                        
                     </form>
                 </div>
-            </div>
-            <div class="modal-footer block-content block-content-full text-end bg-body">
-                <button type="button" class="btn btn-sm btn-alt-secondary me-1"
-                        data-bs-dismiss="modal">
-                    Exit
-                </button>
-                <button type="submit" class="btn btn-sm btn-primary add-user-element"
-                        id="btn-edit-user">
-                    Edit
-                </button>
-            </div>
+                <div class="modal-footer block-content block-content-full text-end bg-body">
+                    <button type="button" class="btn btn-sm btn-alt-secondary me-1"
+                            data-bs-dismiss="modal">
+                        Exit
+                    </button>
+                    <button type="submit" class="btn btn-sm btn-primary add-user-element"
+                            id="btn-edit-user">
+                        Edit
+                    </button>
+                </div>
+        </div>
     </div>
 </div>
 
@@ -296,35 +303,35 @@
                         jQuery(".js-validation-edit").validate({
                             ignore: [],
                             rules: {
-                                "val-fullname": {
+                                "val-fullname-edit": {
                                     required: true,
                                 },
-                                "val-username": {
+                                "val-username-edit": {
                                     required: true,
                                 },
-                                "val-email": {
+                                "val-email-edit": {
                                     required: true,
                                     emailWithDot: true,
                                 },
-                                "val-birthday": {
+                                "val-birthday-edit": {
                                     required: true,
                                 },
-                                "val-phone": {
+                                "val-phone-edit": {
                                     required: true,
                                 }
                             },
                             messages: {
-                                "val-fullname": {
+                                "val-fullname-edit": {
                                     required: "Please enter a fullname",
                                 },
-                                "val-username": {
+                                "val-username-edit": {
                                     required: "Please enter a username",
                                 },
-                                "val-email": "Please enter a valid email address",
-                                "val-birthday": {
+                                "val-email-edit": "Please enter a valid email address",
+                                "val-birthday-edit": {
                                     required: "Please select a birthday",
                                 },
-                                "val-phone": {
+                                "val-phone-edit": {
                                     required: "Please enter phone",
                                 }
                             }
@@ -351,8 +358,9 @@
                         return response.json();
                     })
                     .then(data => {
+                        console.log(data)
                         // Xử lý dữ liệu ở đây, dữ liệu sẽ là danh sách "allCustomers"
-                        customers = data;
+                        customers = data.customers;
                         let htmlCus = '';
                         customers.forEach((item, index) => {
                             index++
@@ -426,6 +434,25 @@
                 $("#user_status").prop("checked", true);
             });
 
+            $("#modal-edit-customer").on("hidden.bs.modal", function () {
+                // Xóa các lớp CSS liên quan đến lỗi validation
+                $("#val-username-edit").removeClass("is-invalid");
+                $("#val-email-edit").removeClass("is-invalid");
+                $("#val-birthday-edit").removeClass("is-invalid");
+                $("#val-fullname-edit").removeClass("is-invalid");
+                $("#val-phone-edit").removeClass("is-invalid");
+
+                // Xóa thẻ HTML hiển thị lỗi validation
+                $(".invalid-feedback").remove();
+
+                $("#val-email-edit").val("");
+                $("#val-username-edit").val("");
+                $("#val-birthday-edit").val("");
+                $("#val-fullname-edit").val("");
+                $("#val-phone-edit").val("");
+                $("#gender-male-edit").prop("checked", true);
+                $("#user_status-edit").prop("checked", true);
+            });
 
 
 
