--- a/Areas/Admin/Views/Home/Index.cshtml
+++ b/Areas/Admin/Views/Home/Index.cshtml
@@ -25,32 +25,32 @@
 <!-- END Hero -->
 <!-- Page Content -->
 <div class="content">
-    <!-- Your Block -->
-    <div class="block block-rounded">
-        <div class="block-header block-header-default">
-            <h3 class="block-title">
-                Title <small>Get Started</small>
-            </h3>
-            <div class="block-options">
-                <button type="button" class="btn-block-option" data-toggle="block-option" data-action="fullscreen_toggle"></button>
-                <button type="button" class="btn-block-option" data-toggle="block-option" data-action="pinned_toggle">
-                    <i class="si si-pin"></i>
-                </button>
-                <button type="button" class="btn-block-option" data-toggle="block-option" data-action="state_toggle" data-action-mode="demo">
-                    <i class="si si-refresh"></i>
-                </button>
-                <button type="button" class="btn-block-option" data-toggle="block-option" data-action="content_toggle"></button>
-                <button type="button" class="btn-block-option" data-toggle="block-option" data-action="close">
-                    <i class="si si-close"></i>
-                </button>
-            </div>
-        </div>
-        <div class="block-content">
-            <p>
-                Create your own awesome project!
+    <div class="d-md-flex justify-content-md-between align-items-md-center py-3 pt-md-3 pb-md-0 text-center text-md-start">
+        <div>
+            <h1 class="h3 mb-1">
+                Dashboard
+            </h1>
+            <p class="fw-medium mb-0 text-muted">
+                Welcome, admin! You have <a class="fw-medium" href="javascript:void(0)">8 new notifications</a>.
             </p>
         </div>
+        <div class="mt-4 mt-md-0">
+            <a class="btn btn-sm btn-alt-primary" href="javascript:void(0)">
+                <i class="fa fa-cog"></i>
+            </a>
+            <div class="dropdown d-inline-block">
+                <button type="button" class="btn btn-sm btn-alt-primary px-3" id="dropdown-analytics-overview" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Last 30 days <i class="fa fa-fw fa-angle-down"></i>
+                </button>
+                <div class="dropdown-menu dropdown-menu-end fs-sm" aria-labelledby="dropdown-analytics-overview">
+                    <a class="dropdown-item" href="javascript:void(0)">This Week</a>
+                    <a class="dropdown-item" href="javascript:void(0)">Previous Week</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="javascript:void(0)">This Month</a>
+                    <a class="dropdown-item" href="javascript:void(0)">Previous Month</a>
+                </div>
+            </div>
+        </div>
     </div>
-    <!-- END Your Block -->
 </div>
 <!-- END Page Content -->
