--- a/Areas/Admin/Views/Products/Index.cshtml
+++ b/Areas/Admin/Views/Products/Index.cshtml
@@ -11,7 +11,7 @@
     <div class="content">
         <div class="block block-rounded">
             <div class="block-header block-header-default">
-                <h3 class="block-title">List Colors</h3>
+                <h3 class="block-title">List Products</h3>
                 <div class="block-options">
                     <a class="btn btn-hero btn-primary" asp-action="Create">
                         <i class="fa-regular fa-plus"></i> Add
